...
                    title: "Dos 1",
                    addedBy: "Tillagd av dig",
                    date: .from(year: 2011, month: 9, day: 30),
                    clinic: "Doktor.se"
                ),
                Dose(
                    title: "Dos 2",
                    addedBy: "Tillagd av dig",
                    date: .from(year: 2012, month: 10, day: 15),
                    clinic: "Doktor.se"
                )
            ]
        ),
...
